--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@
     </div>
 
     <script>
-        const API_URL = "https://dante-propiedades-backend.onrender.com/chat";
+        const API_URL = "https://ia-inmobiliario.onrender.com/chat";
         const chatBox = document.getElementById('chatBox');
         const input = document.getElementById('userInput');
         const button = document.getElementById('sendBtn');
