--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
             transition: background 0.3s ease;
         }
         .btn-imagenes:hover {
-            background: var(--azul);
+            background: var(--rojo);
         }
         
         /* Estilos para el modal de imágenes */
