--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
 
         .btn-imagenes {
             padding: 8px 16px;
-            background: var(--rojo);
+            background: var(--azul);
             color:var(--azul);
             border-radius: 8px;
             cursor: pointer;
