--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
         .btn-imagenes {
             padding: 8px 16px;
             background: var(--azul);
-            color:var(--azul);
+            color:var(--rojo);
             border-radius: 8px;
             cursor: pointer;
             border: none;
