--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
         }
 
         .chat-header {
-            background: linear-gradient(135deg, --rojo    0%, --azul 100%);
+            background: linear-gradient(135deg, var(--rojo)    0%, var(--azul) 100%);
             color: white;
             padding: 20px 30px;
             text-align: center;
