--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
             box-shadow: 0 10px 30px rgba(0,0,0,0.1);
             overflow: hidden;
         }
-
+ /*
         .chat-header {
             background: linear-gradient(135deg, var(--rojo)    0%, var(--azul) 100%);
             color: white;
@@ -181,6 +181,30 @@
             text-align: center;
             position: relative;
         }
+*/
+        .chat-header {
+            display: flex;
+            align-items: center;       /* centra verticalmente */
+            justify-content: space-between;
+            padding: 10px;
+            background: #f5f5f5;
+            }
+
+            .chat-logo {
+            height: 100%;              /* ocupa todo el alto del header */
+            max-height: 60px;          /* límite opcional para no desbordar */
+            margin-right: 15px;        /* espacio entre logo y texto */
+            }
+
+            .chat-info {
+            flex: 1;                   /* ocupa el espacio restante */
+            }
+
+
+
+
+
+
 
         .chat-header h2 {
             font-size: 22px;
@@ -660,7 +684,7 @@
 
         <!-- Área de Chat -->
         <div class="chat-area">
-            <div class="chat-header">
+            <!-- <div class="chat-header">
                 <h2>Asistente Inmobiliario</h2>
                 <div class="chat-subtitle">Encontrá la propiedad perfecta para vos</div>
                 <div class="status-indicator">
@@ -668,7 +692,26 @@
                     <span id="statusText">Conectado</span>
                 </div>
                 <button class="reset-chat" onclick="resetearChat()">Nueva Consulta</button>
+            </div> -->
+
+            <div class="chat-header">
+                <!-- Logo a la izquierda -->
+                <img src="llave.png" alt="Logo Inmobiliario" class="chat-logo">
+
+                <!-- Contenido del header -->
+                <div class="chat-info">
+                    <h2>Asistente Inmobiliario</h2>
+                    <div class="chat-subtitle">Encontrá la propiedad perfecta para vos</div>
+                    <div class="status-indicator">
+                        <div class="status-dot"></div>
+                        <span id="statusText">Conectado</span>
+                    </div>
+                </div>
+
+                <button class="reset-chat" onclick="resetearChat()">Nueva Consulta</button>
             </div>
+
+
 
             <div class="chat-box" id="chatBox">
             </div>
