--- a/index.html
+++ b/index.html
@@ -184,45 +184,41 @@
 */
         .chat-header {
             display: flex;
-            align-items: center;       /* centra verticalmente */
+            align-items: center;        /* centra verticalmente */
             justify-content: space-between;
-            padding: 10px;
-            background: #f5f5f5;
+            background-color: var(--azul);
+            padding: 10px 20px;
             }
 
         .chat-logo {
-            height: 100%;              /* ocupa todo el alto del header */
-            max-height: 60px;          /* límite opcional para no desbordar */
-            margin-right: 15px;        /* espacio entre logo y texto */
+            height: 100%;               /* ocupa el alto del header */
+            max-height: 60px;           /* límite opcional */
+            margin-right: 15px;         /* espacio entre logo y texto */
             }
 
         .chat-info {
-            flex: 1;                   /* ocupa el espacio restante */
+            flex: 1;                    /* ocupa espacio central */
+            text-align: center;         /* centra el texto a lo ancho */
             }
 
-
-        .chat-header {
-            display: flex;
-            flex-direction: column;     /* apila logo, título, subtítulo, etc. */
-            align-items: center;        /* centra horizontalmente */
-            justify-content: center;    /* centra verticalmente */
-            background-color: var(--azul);
-            padding: 15px;
-            text-align: center;         /* centra texto a lo ancho */
+        .chat-info h2,
+        .chat-info .chat-subtitle,
+        .chat-info .status-indicator {
+            color: var(--rojo);         /* texto en rojo */
             }
 
-        .chat-header h2,
-        .chat-header .chat-subtitle,
-        .chat-header .status-indicator,
-        .chat-header .reset-chat {
-                color: var(--rojo);         /* texto en rojo */
+        .reset-chat {
+            background: none;
+            border: 1px solid var(--rojo);
+            color: var(--rojo);
+            padding: 6px 12px;
+            border-radius: 4px;
+            cursor: pointer;
             }
-
-        .chat-logo {
-            max-height: 60px;           /* ajusta según el alto del header */
-            margin-bottom: 10px;
-            }   
-
+        .reset-chat:hover {
+            background-color: var(--rojo);
+            color: #fff;
+            }
 
 
  /*
@@ -734,9 +730,8 @@
             </div>
 
 
-
             <div class="chat-box" id="chatBox">
-            </div>
+        </div>
 
             <!-- Indicador de typing -->
             <div class="typing-indicator" id="typingIndicator">
