--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             color: var(--rojo);
             font-size: 0.9rem;
             }
-            
+
    /*        
         .filters-header {
             text-align: center;
@@ -669,7 +669,7 @@
             <div class="filters-header">
    
                 <div class="logo-container">
-                    <img src="llave.png" alt="Logo Dante Propiedades" class="filters-logo">
+                    <img src="llave.png" alt=" " class="filters-logo">
                     <h1>Dante Propiedades</h1>
                 </div>
 
@@ -754,8 +754,8 @@
 
                 <!-- Contenido del header -->
                 <div class="chat-info">
-                    <h2>Asistente Inmobiliario</h2>
-                    <div class="chat-subtitle">Encontrá la propiedad perfecta para vos</div>
+                    <h2>Dante Propiedades</h2>
+                    <div class="chat-subtitle">Asistente Inmobiliario</div>
                     <div class="status-indicator">
                         <div class="status-dot"></div>
                         <span id="statusText">Conectado</span>
