--- a/index.html
+++ b/index.html
@@ -570,20 +570,20 @@
         }   
 
         .btn-imagenes {
-            padding: 8px 16px;
-            background: var(--azul);
-            color:var(--rojo);
-            border-radius: 8px;
-            cursor: pointer;
+            background-color: var(--azul);
+            color: var(--rojo);
             border: none;
-            font-weight: 600;
+            padding: 6px 12px;
+            border-radius: 4px;
+            cursor: pointer;
             font-size: 14px;
-            transition: background 0.3s ease;
-        }
+            transition: all 0.3s ease;
+            }
+
         .btn-imagenes:hover {
-            background: var(--rojo);
-        }
-        
+            background-color: var(--rojo);
+            color: #fff; /* texto blanco para que se vea sobre fondo rojo */
+            }
         /* Estilos para el modal de imágenes */
         .modal {
             display: none; 
