--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
             display: flex;
             align-items: center;        /* centra verticalmente */
             justify-content: space-between;
-            background-color: background: linear-gradient(135deg, var(var(--azul)) 0%, var(var(--rojo)) 100%);;
+            background-color: linear-gradient(135deg, var(var(--azul)) 0%, var(var(--rojo)) 100%);;
             padding: 10px 20px;
             }
 
