--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
             display: flex;
             align-items: center;        /* centra verticalmente */
             justify-content: space-between;
-            background-color: var(--azul);
+            background: linear-gradient(135deg, var(--azul) 0%, var(--rojo) 100%);
             padding: 10px 20px;
             }
 
