--- a/index.html
+++ b/index.html
@@ -594,7 +594,8 @@
             width: 100%; 
             height: 100%; 
             overflow: auto; 
-            background-color: rgba(0,0,0,0.85);
+            /*background-color: rgba(0,0,0,0.85);*/
+            background-color: var(--azul);
             padding-top: 20px;
             padding-bottom: 20px;
         }
